--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
         <main class="main">
             <div class="meme" id="card">
-                <div class="texto-arriba" id="primerTexto"></div>
+                <h1 class="texto-arriba" id="primerTexto"></h1>
                 <div class="imagen-meme"><img  id="imagenMeme" src="" alt="meme"></div>
-                <div class="texto-abajo" id="segundoTexto"></div>
+                <h2 class="texto-abajo" id="segundoTexto"></h2>
             </div>
         </main>
 
@@ -100,9 +100,9 @@
 
              <label for="">Alinear texto</label>
              <select name="" id="alinearTexto">
-                <option value="left" id="textoIzquierda">izquierda</option>
-                <option value="center" id="textoCentro">centro</option>
-                <option value="right" id="textoDerecha">derecha</option>
+                <option value="left">izquierda</option>
+                <option value="center">centro</option>
+                <option value="right">derecha</option>
              </select>
 
              <label for="">color del texto</label>
