prueba con displaynone

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div> 
         </header>
 
-        <main class="main">
+        <main class="main" #modoOscuro>
             <div class="meme" id="card">
                 <h2 class="texto-arriba" id="primerTexto"></h2>
                 <div class="imagen-meme">
