trabada en claro oscuro

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="sectionArriba">
+<body class="sectionArriba" >
     <header >
         <h1>Generador de Meme</h1>
         <div class="header-button">
             <button id="botonImagen"><i></i>Imagen</button>
             <button id="botonTexto"><i></i>Texto</button>
-            <button><i></i>Modo oscuro</button>
+            <button id="botonColorFondo" ><i></i>Modo oscuro</button>
         </div> 
     </header>
 
-    <main class="main" #modoOscuro>
+    <main class="main">
         <div class="meme" id="card">
             <h2 class="texto-arriba" id="primerTexto"></h2>
             <div class="imagen-meme">
