algunas correciones de modo claro y oscuro en body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="sectionArriba" >
+<body class="sectionArriba" id="body" >
     <header >
         <h1>Generador de Meme</h1>
         <div class="header-button">
@@ -19,7 +19,7 @@
     <main class="main">
         <div class="meme" id="card">
             <h2 class="texto-arriba" id="primerTexto"></h2>
-            <div class="imagen-meme">
+            <div class="imagen-meme modoOscuro">
                 <img  id="imagenMeme" src="" alt="meme">
             </div>
             <h2 class="texto-abajo" id="segundoTexto"></h2>
