modo oscuro y claro

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="main">
         <div class="meme" id="card">
             <h2 class="texto-arriba" id="primerTexto"></h2>
-            <div class="imagen-meme modoOscuro">
+            <div class="imagen-meme">
                 <img  id="imagenMeme" src="" alt="meme">
             </div>
             <h2 class="texto-abajo" id="segundoTexto"></h2>
@@ -30,7 +30,7 @@
         </div>
     </main>
 
-    <aside class="editor-de-meme" id="editorImagen">
+    <aside class="editor-de-meme coloAside" id="editorImagen">
         <h2 >IMAGEN</h2>
 
         <div>
@@ -73,7 +73,7 @@
         </form>
     </aside>
 
-    <aside id="editorTexto">
+    <aside class="coloAside" id="editorTexto">
         <h3>TEXTO</h3>
         <form>
              <label class="editor-texto-contenido">TEXTO SUPERIOR </label>
