problema en claro oscuro

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </main>
 
-    <aside class="editor-de-meme coloAside" id="editorImagen">
+    <aside class="editor-de-meme colorAside" id="editorImagen">
         <h2 >IMAGEN</h2>
 
         <div>
@@ -73,7 +73,7 @@
         </form>
     </aside>
 
-    <aside class="coloAside" id="editorTexto">
+    <aside class="colorAside" id="editorTexto">
         <h3>TEXTO</h3>
         <form>
              <label class="editor-texto-contenido">TEXTO SUPERIOR </label>
