agregue nuevas cosas

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <img  id="imagenMeme" src="" alt="meme">
             </div>
             <h2 class="texto-abajo" id="segundoTexto"></h2>
-            <button id="botonDescargarMeme" >
+        </div>
+         <button id="botonDescargarMeme" >
                 <img src="" alt="">
                 <p>Descargar meme</p>
             </button>
-        </div>
     </main>
 
     <aside class="editor-de-meme colorAside" id="editorImagen">
@@ -109,7 +109,7 @@
              <br>
 
              <label class="editor-texto-contenido" for="">Fondo trasparente</label>
-             <input class="editor-texto-contenido" type="text" id="fondoTransparente">
+             <input class="editor-texto-contenido" type="radio" id="fondoTransparente">
 
              <label class="editor-texto-contenido" for="">Pading del texto</label>
              <input class="editor-texto-contenido" type="number" name="" id="padingTexto">
