no logro sacar la transparencia con el mismo boton

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
     <main class="main">
         <div class="meme" id="card">
-            <h2 class="texto-arriba" id="primerTexto"></h2>
+            <h2 class="texto-arriba claseColorGris" id="primerTexto"></h2>
             <div class="imagen-meme">
                 <img  id="imagenMeme" src="" alt="meme">
             </div>
-            <h2 class="texto-abajo" id="segundoTexto"></h2>
+            <h2 class="texto-abajo claseColorGris" id="segundoTexto"></h2>
         </div>
          <button id="botonDescargarMeme" >
                 <img src="" alt="">
