correcion de scrool

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <input class="contenido-imagen" type="range" id="inputContraste" min="100%" max="1000%" step="1%">
         
             <label class="contenido-imagen alineadoIzquierda">DESENFOQUE </label>
-            <input class="contenido-imagen" type="range" id="inputDesenfoque" min="0px" max="10px" step="0.01px">
+            <input class="contenido-imagen" type="range" id="inputDesenfoque" min="0px" max="10px" step="0.1px">
         
             <label class="contenido-imagen alineadoIzquierda">ESCALA DE GRISES </label>
             <input class="contenido-imagen" type="range" id="inputEscalaDeGrises" min="0%" max="100%" step="1%">
@@ -134,7 +134,7 @@
              <label class="editor-texto-contenido" for="">tamaño de linea</label>
              <input class="editor-texto-contenido" type="number" name="" id="tamañoLinea">
         </form>
-        <button class="restablecerValoresTexto">Restablecer valores</button>
+        <button class="restablecerValoresTexto">Restablecer</button>
     </aside>
 
     <script src="main.js"> </script>
